lecture 02 en + cz: correct rules for adjustment for signed multiplication on unsigned HW
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/02-numbers/apo-lecture02-numbers-en.tex
+++ b/02-numbers/apo-lecture02-numbers-en.tex
@@ -457,8 +457,8 @@ It can be solved:
 
 \end{itemize}
 $A(M\cdot N) = A(M) \cdot A(N)$\\
-\phantom{$A(M\cdot N)$ }$-A(M) \cdot 2^k$ \phantom{xxxxx} when $M<0$\\
-\phantom{$A(M\cdot N)$ }$-A(N) \cdot 2^k$ \phantom{xxxxx} when $N<0$
+\phantom{$A(M\cdot N)$ }$-A(M) \cdot 2^k$ \phantom{xxxxx} when $N<0$\\
+\phantom{$A(M\cdot N)$ }$-A(N) \cdot 2^k$ \phantom{xxxxx} when $M<0$
 %\begin{itemize}
 \begin{itemize}
 \item because two's complement representation of $A(M) = 2^k+M$, then result of multiplication for for two negative numbers is $(2^k+M)\cdot (2^k+N) = 2^{2\cdot k}+2^k \cdot M + 2^k \cdot N + M \cdot N$
