--- a/02-numbers/apo-lecture02-numbers-cz.tex
+++ b/02-numbers/apo-lecture02-numbers-cz.tex
@@ -434,8 +434,8 @@ Odčítání lze řešit:
 \item pro násobení lze odvodit, že pokud bychom ignorovali znaménko a spočítali $M\cdot N$, pak pro $M$,$N$ obě k-bitová čísla musíme výsledek upravit takto:
 \end{itemize}
 $A(M\cdot N) = A(M) \cdot A(N)$\\
-\phantom{$A(M\cdot N)$ }$-A(M) \cdot 2^k$ \phantom{xxxxx} pokud $M<0$\\
-\phantom{$A(M\cdot N)$ }$-A(N) \cdot 2^k$ \phantom{xxxxx} pokud $N<0$
+\phantom{$A(M\cdot N)$ }$-A(M) \cdot 2^k$ \phantom{xxxxx} pokud $N<0$\\
+\phantom{$A(M\cdot N)$ }$-A(N) \cdot 2^k$ \phantom{xxxxx} pokud $M<0$
 %\begin{itemize}
 \begin{itemize}
 \item protože reprezentace záporného čísla dvojkovým doplňkem je vlastně $A(M) = 2^k+M$, pak součin dvou záporných čísel je $(2^k+M)\cdot (2^k+N) = 2^{2\cdot k}+2^k \cdot M + 2^k \cdot N + M \cdot N$
