lecture 07 cz: correct Boud to Baud on slide 24
Closes #72

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/07-io/apo-lecture07-io-cz.tex
+++ b/07-io/apo-lecture07-io-cz.tex
@@ -429,7 +429,7 @@ Sériová linka (sériový port) je jedna z nejstarších způsobů komunikace v
 \end{itemize}
 \footnotesize
 \item Vyslání jednoho bajtu tedy obsahuje vyslání 10-11 bitů
-\item Běžné rychlosti, dříve 9600 Bd až 115200 Bd, nově až 921600 Bd (Bd -- Boud = bit per second)
+\item Běžné rychlosti, dříve 9600 Bd až 115200 Bd, nově až 921600 Bd (Bd -- Baud = bit per second)
 \end{itemize}
 
 \begin{center}
