lecture 07 cz and en: update images to allows English version build
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/07-io/apo-lecture07-io-cz.tex
+++ b/07-io/apo-lecture07-io-cz.tex
@@ -719,7 +719,7 @@ C/BE jsou 4 bity příkazu
 CTRL jsou bity řídicí průběh přenosu
 \end{column}
 \begin{column}{0.6\textwidth}  
-\includegraphics[width=\textwidth]{PCI_arch.pdf}
+\includegraphics[width=\textwidth]{PCI_arch-cz.pdf}
 \end{column}
 \end{columns}
 
