lecture 08 cz: correct spelling
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/08-mz_apo/apo-lecture08-mz_apo-cz.tex
+++ b/08-mz_apo/apo-lecture08-mz_apo-cz.tex
@@ -312,7 +312,7 @@ Seznam implementací \url{https://en.wikipedia.org/wiki/ARM\_Cortex-A9\#Implemen
 \end{frame}
 
 \begin{frame}
-\frametitle{MZ\_APO -- logický návrh, propjení sběrnic a bloků}
+\frametitle{MZ\_APO -- logický návrh, propojení sběrnic a bloků}
 
 \includegraphics[width=1.0\textwidth]{mz_apo-vivado-design.pdf}
 
