lecture 08 en: add CAN latency tester and pysimCoder examples
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/08-mz_apo/apo-lecture08-mz_apo-en.tex
+++ b/08-mz_apo/apo-lecture08-mz_apo-en.tex
@@ -646,6 +646,45 @@ and blocks to control DC on MZ\_APO
 
 
 \begin{frame}
+\frametitle{CAN/CAN FD Gateway Latency Tester Cabinet}
+
+  \centering
+
+  \includegraphics[width=1.0\linewidth,height=0.87\textheight,clip=true,keepaspectratio]{fig/latester-cabinet3-crop.jpg}
+
+\end{frame}
+
+\begin{frame}\frametitle{CAN/CAN FD Latency Tester -- Daily Results}
+
+  \centering
+
+  \includegraphics[width=1.0\linewidth,height=0.85\textheight,clip=true,keepaspectratio]{fig/latester-overview-2024-10.pdf}
+
+\end{frame}
+
+
+\begin{frame}
+\frametitle{DC Motor Control for Education on MZ\_APO Zynq FPGA}
+
+\begin{center}
+\includegraphics[width=1\textwidth,height=0.75\textheight,clip=true,keepaspectratio]{fig/mz_apo-dcspdrv-schema.pdf}
+\par\end{center}
+
+{\footnotesize \url{https://gitlab.fel.cvut.cz/canbus/zynq/zynq-can-sja1000-top/-/tree/master/system/ip/dcsimpledrv_1.0}}
+\end{frame}
+
+
+\begin{frame}
+\frametitle{pysimCoder Servo Control on Xylinx Zynq MZ\_APO Kit}
+
+\includegraphics[width=.95\linewidth,height=0.85\textheight,clip=true,keepaspectratio]{fig/DC_PID_follower-screenshot.png}
+
+{\footnotesize \url{https://github.com/robertobucher/pysimCoder-examples}}
+
+\end{frame}
+
+
+\begin{frame}
 \frametitle{Articles About GNU/Linux Use for RT Control on Root.cz in Czech}
 
 \href{https://www.root.cz/}{https://www.root.cz/}
