lecture 09 cz: update - QtRvSim can run IRQ example already
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/09-irq-events/apo-lecture09-irq-events-cz.tex
+++ b/09-irq-events/apo-lecture09-irq-events-cz.tex
@@ -686,7 +686,7 @@ handle_uart_rx_irq:
 
 \url{https://gitlab.fel.cvut.cz/b35apo/stud-support/-/blob/master/seminaries/qtrvsim/uart-echo-irq/uart-echo-irq.S}
 
-QtRVSim simulátor v RISC-V zatím podporu nemá, QtMips, v MIPS přerušení podporuje.
+RISC-V simulátor v QtRVSim (stejně jako QtMips pro MIPS) již přerušení podporuje.
 
 \end{frame}
 
