lecture 09 cz: minor fixes spotted during translation
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/09-irq-events/apo-lecture09-irq-events-cz.tex
+++ b/09-irq-events/apo-lecture09-irq-events-cz.tex
@@ -212,7 +212,7 @@ a přístup pro zápis pro jejich nastavení, monitorování a parametry
 \section{Zpracování událostí, přerušení a výjimky}
 
 \begin{frame}
-\frametitle{Základní cyklus procesoru (opakování z lekce 2)}
+\frametitle{Základní cyklus procesoru (opakování z lekce 3)}
 \begin{enumerate}
   \item Počáteční nastavení -- inicializace registru PC a PSW (případně i dalších) po zapnutí proudu nebo po resetu procesoru
   \item Přečti instrukci z paměti z adresy PC
@@ -304,7 +304,7 @@ externí přerušení pouze tehdy, není-li maskováno nebo není-li maskováno
 \end{frame}
 
 \begin{frame}
-\frametitle{roky při zpracování výjimek nebo přerušení -- ukončení obsluhy}
+\frametitle{Kroky při zpracování výjimek nebo přerušení -- ukončení obsluhy}
 
 \begin{enumerate}
  \setcounter{enumi}{4}
