Fix typo in word `registru`

--- a/03-cpu/apo-lecture03-cpu-cz.tex
+++ b/03-cpu/apo-lecture03-cpu-cz.tex
@@ -674,7 +674,7 @@ Kódování & \texttt{iiii iiit tttt ssss s010 iiii i010 0011} \\
 
 \bigskip
 
-Příklad: Uloží 32-bitové slovo z regisrtu 2 do paměti na adresu 0x404 plus hodnota registru 5:\\
+Příklad: Uloží 32-bitové slovo z registru 2 do paměti na adresu 0x404 plus hodnota registru 5:\\
 \textbf{\texttt{sw x2, 0x404(x5)}}
 
 \textbf{\texttt{{\color{green}iiii iii}\hspace{0.08cm}\color{red}t tttt}}\phantom{x}\hspace{0.13cm}\textbf{\texttt{\color{blue}ssss s}}\hspace{0.1cm}\textbf{\texttt{010\hspace{0.25cm}{\color{green}iiii i}\hspace{0.05cm}010 0011}}\\
