lecture 05: corrected typo reported by Tereza Navrátilová
Closes #70

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/05-pipeline/apo-lecture05-pipeline-cz.tex
+++ b/05-pipeline/apo-lecture05-pipeline-cz.tex
@@ -231,7 +231,7 @@ $\lim_{n \rightarrow \infty} S_k = k$
  \item K zápisníkové paměti (register file) se přistupuje ze dvou stupňů (Decode, WriteBack) --
        zápis se uskutečňuje v první půli cyklu, čtení v druhé $\Rightarrow$ v instrukci sub pro vstop \textbf{s0} hazard nevzniká
  \item Čtení-po-zápisu (Read After Write -- RAW) hazard vzniká u instrukcí
-       \textbf{and} a \textbf{or} při čtení \textbf{s0} v cychlech 3 a 4
+       \textbf{and} a \textbf{or} při čtení \textbf{s0} v cyklech 3 a 4
  \item Jak zamezit takovému hazardu bez degradace propustnosti pipeline?
 \end{itemize}
 
