lecture 05: corrected typo reported by Tomchik, Roman
Closes #69

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/05-pipeline/apo-lecture05-pipeline-cz.tex
+++ b/05-pipeline/apo-lecture05-pipeline-cz.tex
@@ -164,7 +164,7 @@ Bez úprav dojde ke zpoždění skolových instrukcí (\texttt{beq}), viz poděj
 \begin{frame}
 \frametitle{Zřetězené vykonávání instrukcí -- pipelining}
 
-Budeme uvažovat rodělení vykonávání instrukcí do pěti stupní (stages).
+Budeme uvažovat rozdělení vykonávání instrukcí do pěti stupní (stages).
 
 \vskip 2 mm
 
