lecture 05: corrected typo reported by Alina Haitota
Closes #68

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/05-pipeline/apo-lecture05-pipeline-cz.tex
+++ b/05-pipeline/apo-lecture05-pipeline-cz.tex
@@ -155,7 +155,7 @@ po dosazení
  \item $\rightarrow f_{C} = 1.45$\,MHz $\rightarrow IPS = 1\,450\,000$
 \end{itemize}
 
-Bez úprav dojde ke zpoždění skolových instrukcí (\texttt{beq}), viz poději
+Bez úprav dojde ke zpoždění skokových instrukcí (\texttt{beq}), viz poději
 
 \end{frame}
 
