lecture 05 cz: corrected typo reported by Roman Tomchik
Closes #65

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/05-pipeline/apo-lecture05-pipeline-cz.tex
+++ b/05-pipeline/apo-lecture05-pipeline-cz.tex
@@ -111,7 +111,7 @@ $IPS = 1 \cdots 980e3 = 980\,000$ instrukcí za sekundu
 \vskip 2 mm
 
 \begin{enumerate}
- \item Načtení instrucke (instrukcion fetch) a zvýšení čítače instrukcí $PC = PC + 4$
+ \item Načtení instrucke (instruction fetch) a zvýšení čítače instrukcí $PC = PC + 4$
  \item Vlastní vykonání (execution) instrukce až v následujícím cyklu
 \end{enumerate}
 
