lecture 04 cz+en: corrected/unified GB suffix, reported by Tereza Navrátilová
Closes #67

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/04-memory/apo-lecture04-memory-en.tex
+++ b/04-memory/apo-lecture04-memory-en.tex
@@ -305,7 +305,7 @@ All of these types are predominantly optimized for throughput, not random access
 \begin{tabular}{l|llll}
 Type     & L1 SRAM   & Sync SRAM &  DDR3      & HDD \\
 Velikost & 32kB      & 1 MB      &  16 GB     & 3TB \\
-Cena     & 10 kč/kB  & 300 kč/MB &  123 kč/Gb & 1 kč/GB \\
+Cena     & 10 kč/kB  & 300 kč/MB &  123 kč/GB & 1 kč/GB \\
 Rychlost & 0.2...2ns & 0.5...8 ns/word & 15 GB/sec & 100 MB/sec \\
 \end{tabular}
 
