lecture 04 cz: corrected typo reported by Tereza Navrátilová
Closes #66

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/04-memory/apo-lecture04-memory-cz.tex
+++ b/04-memory/apo-lecture04-memory-cz.tex
@@ -169,7 +169,7 @@ Paměti lze dělit i podle toho, zda data jsou uchována po vypnutí napájení:
 \begin{frame}
 \frametitle{Konstrukce paměti}
 
-Podle kontrukce dělíme paměti RAM (RWM) na:
+Podle konstrukce dělíme paměti RAM (RWM) na:
 \bigskip
 
 \begin{tabular}{m{0.8cm}m{6cm}m{4cm}}
