lecture 03 cz: corrected typo reported by Pavel Gottesman
Closes #64

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/03-cpu/apo-lecture03-cpu-cz.tex
+++ b/03-cpu/apo-lecture03-cpu-cz.tex
@@ -768,7 +768,7 @@ R & \multicolumn{2}{c|}{ fnct7 } & \multicolumn{2}{c|}{ rs2 } & rs1 & fnct3 &\mu
 
 
 \begin{frame}
-\frametitle{Implementace instrukce sub, amd, or, slt}
+\frametitle{Implementace instrukce sub, and, or, slt}
 
 Jediný rozdíl oproti instrukci sčítání add je v hodnotě ALUControl, který vybírá, jakou operaci jednotka ALU provede. Cesta dat a uložení výsledku je stejná jako u sčítání.
 \bigskip
