lecture 03 cz+en: missing translation in cz and correction in en by Tobias Lemeer
Closes #60

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/03-cpu/apo-lecture03-cpu-cz.tex
+++ b/03-cpu/apo-lecture03-cpu-cz.tex
@@ -98,7 +98,7 @@ Vstupně výstupní podsystém:
 \begin{itemize}
 \item PC (Program Counter) -- adresa právě prováděné (nebo následující) instrukce
 \item IR (Instruction Register) -- obsahje kód prováděné instrukce načtený z paměti
-\item Another usually present registers
+\item Další obvykle přítomné registry
 \begin{itemize}
 \item GPRs (General purpose registers) -- obecné uživatelské registry, mohou se dělit na data a adresy do paměti, nebo být univerzální
 \item SP (Stack Pointer) -- ukazuje na vrchol zásobníku, slouží k organizaci lokálních dat funkcí
