--- a/03-cpu/apo-lecture03-cpu-en.tex
+++ b/03-cpu/apo-lecture03-cpu-en.tex
@@ -120,7 +120,7 @@ The flow of instructions and data through processor is usually divided into
 \begin{itemize}
 \item PC (Program Counter) -- holds address of a recent or next instruction to be processed
 \item IR (Instruction Register) -- holds the machine instruction read from memory
-\item Another usually present registers
+\item Other usually present registers
 \begin{itemize}
 \item GPRs (General purpose registers) -- directly under user control, may be divided to address and data or (partially) specialized registers
 \item SP (Stack Pointer) -- points to the top of the stack; (The stack is usually used to store local variables and subroutine return addresses)
