lecture 09 en: value reprezentation and limits spelling
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/09-irq-events/apo-lecture09-irq-events-en.tex
+++ b/09-irq-events/apo-lecture09-irq-events-en.tex
@@ -96,7 +96,7 @@ Replaces single/specific purpose controllers. Advantages:
  \end{itemize}
  \item precise/deterministic processing of (physical) quantities
  \begin{itemize}
-  \item values reprezentationa and limits
+  \item value reprezentation and limits
  \end{itemize}
  \item hierarchical control
  \begin{itemize}
