lecture 10 en: correct typo
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/10-call/apo-lecture10-call-en.tex
+++ b/10-call/apo-lecture10-call-en.tex
@@ -330,7 +330,7 @@ Stack implementation where the top is defined by \texttt{sp} (\texttt{x2}) regis
 \end{frame}
 
 \begin{frame}
-\frametitle{What Is Stored onto Sack in Function?}
+\frametitle{What Is Stored onto Stack in Function?}
 
 Activation or stack frame stores:
 \begin{itemize}
@@ -690,7 +690,7 @@ Each process has it own memory context with 4GiB of virtual address space:
 \begin{frame}[fragile,shrink=5]
 \frametitle{The Homework No. 4 -- Global Variables}
 
-Global variables presnetce indication:
+Global variables presence indication:
 \begin{itemize}
 \item A global variable is a variable defined outside a function, or inside a function using the \texttt{static} keyword
 \item Global initialized variables are placed in the \texttt{.data} section, uninitialized (but zeroed in the C case) variables in the \texttt{.bss} section
