lecture 10 cz+en: list zero register in the ABI table
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/10-call/apo-lecture10-call-cz.tex
+++ b/10-call/apo-lecture10-call-cz.tex
@@ -353,6 +353,7 @@ Každý registr buď nastavuje a je za něj zodpovědný volající (caller), ne
 \begin{tabular}{|c|c|p{4cm}|c|}\hline
 Symbolické & Registr & Popis & Ukládá \\
    jméno   &         &       &        \\ \hline
+zero & x0 & fixní nula/ignorovaný &  -- --\\\hline
 a0 - a7 & x10 - x17 & vstupní parametry funkce & volající \\\hline
 a0, a1 & x10, x11 & výstupní hodnota funkce & volaný \\\hline
 ra & x1 & návratová adresa & volající \\\hline
